# PyCodeRunner

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
PyCodeRunner/core/: __init__.py  core.py
PyCodeRunner/error/: __init__.py
PyCodeRunner/models/: __init__.py  model_code.py
PyCodeRunner/routers/: __init__.py  code.py
pycoderunner/: main.py
pycoderunner/core/: __init__.py  core.py  execute_with_code.py  execute_with_test.py
pycoderunner/error/: errors.py
pycoderunner/models/: __init__.py  model_code.py  run_code.py  run_tests.py
pycoderunner/routers/: code.py  router.py
