[tool.poetry]
name = "pycoderunner"
version = "0.1.0"
description = ""
authors = ["Nícolas Albuquerque Ramos <nar1@aluno.ifal.edu.br>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
